[gd_scene load_steps=65 format=3 uid="uid://ck7jykui0yi2h"]

[ext_resource type="Texture2D" uid="uid://80nhyosqlb4u" path="res://Assets/Cyclop2/Dying/Dying_001.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dckleqxtaibhi" path="res://Assets/Cyclop2/Hurt/Hurt_007.png" id="2"]
[ext_resource type="Texture2D" uid="uid://8kn28bv62fmj" path="res://Assets/Cyclop2/Walking/Walking_007.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dm142v3dko0qv" path="res://Assets/Cyclop2/Dying/Dying_002.png" id="4"]
[ext_resource type="Script" path="res://Scripts/Cyclop2.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://belr3gpmk5354" path="res://Assets/Cyclop2/Hurt/Hurt_006.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bno1u23ke1ob1" path="res://Assets/Cyclop2/Walking/Walking_009.png" id="7"]
[ext_resource type="Texture2D" uid="uid://x4a4by25lu2v" path="res://Assets/Cyclop2/Walking/Walking_008.png" id="8"]
[ext_resource type="Texture2D" uid="uid://8fxanua32unw" path="res://Assets/Cyclop2/Dying/Dying_005.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dpofp8y1l8cty" path="res://Assets/Cyclop2/Dying/Dying_006.png" id="10"]
[ext_resource type="Texture2D" uid="uid://iw0l018e6am1" path="res://Assets/Cyclop2/Dying/Dying_000.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cfq3aenlbtw0g" path="res://Assets/Cyclop2/Dying/Dying_003.png" id="12"]
[ext_resource type="Texture2D" uid="uid://edj6c5mjbird" path="res://Assets/Cyclop2/Walking/Walking_006.png" id="13"]
[ext_resource type="Texture2D" uid="uid://db4xxrtyabvqu" path="res://Assets/Cyclop2/Hurt/Hurt_002.png" id="14"]
[ext_resource type="Texture2D" uid="uid://kijxnrtn0d0v" path="res://Assets/Cyclop2/Hurt/Hurt_003.png" id="15"]
[ext_resource type="Texture2D" uid="uid://d1i18hxfy7gq6" path="res://Assets/Cyclop2/Hurt/Hurt_008.png" id="16"]
[ext_resource type="Texture2D" uid="uid://bpdqpbx8wwc0f" path="res://Assets/Cyclop2/Hurt/Hurt_011.png" id="17"]
[ext_resource type="Texture2D" uid="uid://nsnigkev427b" path="res://Assets/Cyclop2/Hurt/Hurt_010.png" id="18"]
[ext_resource type="Texture2D" uid="uid://br4kdipukqiqn" path="res://Assets/Cyclop2/Walking/Walking_013.png" id="19"]
[ext_resource type="Texture2D" uid="uid://bksd5hjfxpyuh" path="res://Assets/Cyclop2/Walking/Walking_012.png" id="20"]
[ext_resource type="Texture2D" uid="uid://djns8rbtdfcjy" path="res://Assets/Cyclop2/Dying/Dying_007.png" id="21"]
[ext_resource type="Texture2D" uid="uid://i50ir4w84lag" path="res://Assets/Cyclop2/Dying/Dying_010.png" id="22"]
[ext_resource type="Texture2D" uid="uid://dgqad2hth5ls7" path="res://Assets/Cyclop2/Dying/Dying_013.png" id="23"]
[ext_resource type="Texture2D" uid="uid://7myqun1273vr" path="res://Assets/Cyclop2/Dying/Dying_014.png" id="24"]
[ext_resource type="Texture2D" uid="uid://bca0t5fmg6iqc" path="res://Assets/Cyclop2/Dying/Dying_011.png" id="25"]
[ext_resource type="Texture2D" uid="uid://dqdy3ntylk2oh" path="res://Assets/Cyclop2/Hurt/Hurt_005.png" id="26"]
[ext_resource type="Texture2D" uid="uid://blekjrhvy02d2" path="res://Assets/Cyclop2/Walking/Walking_000.png" id="27"]
[ext_resource type="Texture2D" uid="uid://u02eip2e0jdp" path="res://Assets/Cyclop2/Dying/Dying_008.png" id="28"]
[ext_resource type="Texture2D" uid="uid://djm26s1dqnvfl" path="res://Assets/Cyclop2/Walking/Walking_002.png" id="29"]
[ext_resource type="Texture2D" uid="uid://ryorygpeeei6" path="res://Assets/Cyclop2/Walking/Walking_004.png" id="30"]
[ext_resource type="Texture2D" uid="uid://cltfci5ocj4m2" path="res://Assets/Cyclop2/Hurt/Hurt_000.png" id="31"]
[ext_resource type="AudioStream" uid="uid://ba8gu4c4h6vs8" path="res://Assets/Sound/Hit.mp3" id="32"]
[ext_resource type="Texture2D" uid="uid://dlkp2jnbavt52" path="res://Assets/Cyclop2/Hurt/Hurt_009.png" id="33"]
[ext_resource type="Texture2D" uid="uid://cmya1e6r5qewg" path="res://Assets/Cyclop2/Walking/Walking_005.png" id="34"]
[ext_resource type="Texture2D" uid="uid://dwrkh2ytd65ri" path="res://Assets/Cyclop2/Walking/Walking_001.png" id="35"]
[ext_resource type="Texture2D" uid="uid://bik5d54axpftm" path="res://Assets/Cyclop2/Walking/Walking_003.png" id="36"]
[ext_resource type="Texture2D" uid="uid://bbs4cjv63kmwa" path="res://Assets/Cyclop2/Hurt/Hurt_004.png" id="37"]
[ext_resource type="Texture2D" uid="uid://bscmwucc3almc" path="res://Assets/Cyclop2/Walking/Walking_015.png" id="38"]
[ext_resource type="Texture2D" uid="uid://vka5eosveq24" path="res://Assets/Cyclop2/Walking/Walking_014.png" id="39"]
[ext_resource type="Texture2D" uid="uid://b8c8um2ixt8dd" path="res://Assets/Cyclop2/Walking/Walking_011.png" id="40"]
[ext_resource type="Texture2D" uid="uid://b2e8cbtjt7av4" path="res://Assets/Cyclop2/Walking/Walking_010.png" id="41"]
[ext_resource type="Texture2D" uid="uid://cre7qakfa3prd" path="res://Assets/Cyclop2/Walking/Walking_016.png" id="42"]
[ext_resource type="Texture2D" uid="uid://clxqxw7x3whbb" path="res://Assets/Cyclop2/Walking/Walking_017.png" id="43"]
[ext_resource type="Texture2D" uid="uid://bpb74mcxgp37o" path="res://Assets/Cyclop2/Hurt/Hurt_001.png" id="44"]
[ext_resource type="Texture2D" uid="uid://bcd63nqond3u5" path="res://Assets/Cyclop2/Dying/Dying_012.png" id="45"]
[ext_resource type="Texture2D" uid="uid://d3vlgebkxdlya" path="res://Assets/Cyclop2/Dying/Dying_009.png" id="46"]
[ext_resource type="Texture2D" uid="uid://cidgplhuapkyv" path="res://Assets/Cyclop2/Dying/Dying_004.png" id="47"]
[ext_resource type="Texture2D" uid="uid://x2pcnxfggvyl" path="res://Assets/Cyclop2/Attacking/Attacking_000.png" id="48"]
[ext_resource type="Texture2D" uid="uid://6iy0q2tcf5xr" path="res://Assets/Cyclop2/Attacking/Attacking_001.png" id="49"]
[ext_resource type="Texture2D" uid="uid://6y8w8muyo36s" path="res://Assets/Cyclop2/Attacking/Attacking_008.png" id="50"]
[ext_resource type="Texture2D" uid="uid://parsuf6cwakq" path="res://Assets/Cyclop2/Attacking/Attacking_009.png" id="51"]
[ext_resource type="Texture2D" uid="uid://cyh4mm4y826a4" path="res://Assets/Cyclop2/Attacking/Attacking_010.png" id="52"]
[ext_resource type="Texture2D" uid="uid://cb4kp3t6i31u" path="res://Assets/Cyclop2/Attacking/Attacking_007.png" id="53"]
[ext_resource type="Texture2D" uid="uid://ckn3dlbkuvrey" path="res://Assets/Cyclop2/Attacking/Attacking_003.png" id="54"]
[ext_resource type="Texture2D" uid="uid://crla8rs0o7an5" path="res://Assets/Cyclop2/Attacking/Attacking_002.png" id="55"]
[ext_resource type="Texture2D" uid="uid://b1e458ismwowy" path="res://Assets/Cyclop2/Attacking/Attacking_011.png" id="56"]
[ext_resource type="Texture2D" uid="uid://bupjc42rlagju" path="res://Assets/Cyclop2/Attacking/Attacking_006.png" id="57"]
[ext_resource type="Texture2D" uid="uid://bmqf31vlvfclm" path="res://Assets/Cyclop2/Attacking/Attacking_005.png" id="58"]
[ext_resource type="Texture2D" uid="uid://npgkt81rek82" path="res://Assets/Cyclop2/Attacking/Attacking_004.png" id="59"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("48")
}, {
"duration": 1.0,
"texture": ExtResource("49")
}, {
"duration": 1.0,
"texture": ExtResource("55")
}, {
"duration": 1.0,
"texture": ExtResource("54")
}, {
"duration": 1.0,
"texture": ExtResource("59")
}, {
"duration": 1.0,
"texture": ExtResource("58")
}, {
"duration": 1.0,
"texture": ExtResource("57")
}, {
"duration": 1.0,
"texture": ExtResource("53")
}, {
"duration": 1.0,
"texture": ExtResource("50")
}, {
"duration": 1.0,
"texture": ExtResource("51")
}, {
"duration": 1.0,
"texture": ExtResource("52")
}, {
"duration": 1.0,
"texture": ExtResource("56")
}],
"loop": true,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("47")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("21")
}, {
"duration": 1.0,
"texture": ExtResource("28")
}, {
"duration": 1.0,
"texture": ExtResource("46")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}, {
"duration": 1.0,
"texture": ExtResource("25")
}, {
"duration": 1.0,
"texture": ExtResource("45")
}, {
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("24")
}],
"loop": true,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31")
}, {
"duration": 1.0,
"texture": ExtResource("44")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("37")
}, {
"duration": 1.0,
"texture": ExtResource("26")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("33")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27")
}, {
"duration": 1.0,
"texture": ExtResource("35")
}, {
"duration": 1.0,
"texture": ExtResource("29")
}, {
"duration": 1.0,
"texture": ExtResource("36")
}, {
"duration": 1.0,
"texture": ExtResource("30")
}, {
"duration": 1.0,
"texture": ExtResource("34")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("41")
}, {
"duration": 1.0,
"texture": ExtResource("40")
}, {
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": ExtResource("39")
}, {
"duration": 1.0,
"texture": ExtResource("38")
}, {
"duration": 1.0,
"texture": ExtResource("42")
}, {
"duration": 1.0,
"texture": ExtResource("43")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(117, 158)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(74, 21.125)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(200, 146)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(320, 57)

[node name="Cyclop2" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 163
script = ExtResource("5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
sprite_frames = SubResource("1")
animation = &"walking"
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 39)
shape = SubResource("4")

[node name="FloorChecker" type="RayCast2D" parent="."]
target_position = Vector2(0, 250)
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2(-7, -142.875)
shape = SubResource("3")

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2(23, 26)
shape = SubResource("5")

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(0, 47)
shape = SubResource("6")

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("32")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.270588, 0.937255, 0.294118, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = -192.0
offset_right = 128.0
offset_bottom = -165.0
grow_horizontal = 2
step = 1.0
show_percentage = false
